# ura-lightning-detection

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  SYNOLOGY_WEB_DEMO.md  WEBAPP_README.md  WIRELESS_OUTDOOR_SIGNAGE.md  docker-compose.yml  nginx.conf  pyproject.toml  pyproject.toml.backup  run.py
.github/: copilot-instructions.md
notebooks/: README.md  lightning_api_test.ipynb  singapore_geocoding.ipynb
src/: lightning_service.py  map_generator.py  singapore_geocoder.py  webapp.py
templates/: index.html
tests/: conftest.py
tests/unit/: test_lightning_service.py  test_singapore_geocoder.py
